--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
     "vue-carousel": "^0.18.0",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "webpack-bundle-tracker": "^0.4.2-beta"
   },
