--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "vue/no-use-v-if-with-v-for": ["error", {
+        "allowUsingIterationVar": false
+      }]
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
