--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.4",
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
@@ -37,9 +39,13 @@
       "eslint:recommended"
     ],
     "rules": {
-      "vue/no-use-v-if-with-v-for": ["error", {
-        "allowUsingIterationVar": false
-      }]
+      "vue/no-use-v-if-with-v-for": [
+        "error",
+        {
+          "allowUsingIterationVar": false
+        }
+      ],
+      "no-console": "off"
     },
     "parserOptions": {
       "parser": "babel-eslint"
