--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
+    "vuelidate": "^0.7.4",
     "webpack-bundle-tracker": "^0.4.2-beta"
   },
   "devDependencies": {
