fix top menu and styles for login and registration modal form

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "vue/no-use-v-if-with-v-for": [
         "error",
         {
-          "allowUsingIterationVar": false
+          "allowUsingIterationVar": true
         }
       ],
       "no-console": "off"
