--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vuelidate": "^0.7.4",
+    "vuex": "^3.1.1",
     "webpack-bundle-tracker": "^0.4.2-beta"
   },
   "devDependencies": {
