--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-carousel": "^0.18.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
+    "vue-select": "^3.1.0",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.1",
     "webpack-bundle-tracker": "^0.4.2-beta"
