--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-carousel": "^0.18.0",
+    "vue-masked-input": "^0.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.6",
     "vue-select": "^3.1.0",
